# airport-api

./: .gitignore  Dockerfile  Makefile  README.md  compose.yaml  manage.py  pyproject.toml
airport/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
airport/migrations/: 0001_initial.py  0002_initial.py
core/: asgi.py  settings.py  urls.py  wsgi.py
user/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
user/migrations/: 0001_initial.py
